--- a/User/User.vbproj
+++ b/User/User.vbproj
@@ -84,12 +84,6 @@
     <Compile Include="Forms\DataProduk.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\LihatTransaksiBiaya.Designer.vb">
-      <DependentUpon>LihatTransaksiBiaya.vb</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\LihatTransaksiBiaya.vb">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="Forms\LihatPendapatan.Designer.vb">
       <DependentUpon>LihatPendapatan.vb</DependentUpon>
     </Compile>
@@ -160,6 +154,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\LihatPengeluaran.resx">
       <DependentUpon>LihatPengeluaran.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\LihatTransaksiProduk.resx">
+      <DependentUpon>LihatTransaksiProduk.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\TambahPengeluaran.resx">
+      <DependentUpon>TambahPengeluaran.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\userUtama.resx">
       <DependentUpon>UserUtama.vb</DependentUpon>
