--- a/User/User.vbproj
+++ b/User/User.vbproj
@@ -94,16 +94,16 @@
     <Compile Include="Forms\DataProduk.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Forms\ListProduk.Designer.vb">
+      <DependentUpon>ListProduk.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\ListProduk.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Forms\Login.Designer.vb">
       <DependentUpon>Login.vb</DependentUpon>
     </Compile>
     <Compile Include="Forms\Login.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\LVProduk.Designer.vb">
-      <DependentUpon>LVProduk.vb</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\LVProduk.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\TambahTransaksiJasa.Designer.vb">
@@ -149,11 +149,11 @@
     <EmbeddedResource Include="Forms\DataProduk.resx">
       <DependentUpon>DataProduk.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ListProduk.resx">
+      <DependentUpon>ListProduk.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Login.resx">
       <DependentUpon>Login.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\LVProduk.resx">
-      <DependentUpon>LVProduk.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\TambahTransaksiJasa.resx">
       <DependentUpon>TambahTransaksiJasa.vb</DependentUpon>
